<resources>
    <string name="app_name">Preferences</string>
    <string name="settings">Settings</string>

    <string name="wireless_network">Wireless Networks</string>
    <string name="wireless_network_key">wireless_network_key</string>

    <string name="wifi">WI-FI</string>
    <string name="wifi_set">Wifi Setting</string>
    <string name="bluetooth">bluetooth</string>

    <string name="about">About</string>
    <string name="yourname">Your Name</string>
    <string name="providerName">Pls provide your name</string>

    <string name="appupdate">Application Updates</string>
    <string name="downloads">Download Details</string>

    <string-array name="listArray">
        <item>TXT</item>
        <item>DOC</item>
        <item>PDF</item>
    </string-array>
    <string-array name="listValues">
        <item>txt</item>
        <item>doc</item>
        <item>pdf</item>
    </string-array>

    <string name="multiselect">Multi Select</string>
    <string-array name="multis">
        <item>Linux</item>
        <item>Mac OSX</item>
        <item>Unix</item>
        <item>Windows</item>
    </string-array>
    <string-array name="multivalues">
        <item>linux</item>
        <item>osx</item>
        <item>unix</item>
        <item>windows</item>
    </string-array>
    <string name="language">Language</string>
    <string name="language_set">Language Settings</string>

    <string-array name="country">
        <item>简体中文</item>
        <item>English</item>
    </string-array>
    <string-array name="countryValues">
        <item>zh</item>
        <item>en</item>
    </string-array>


    <string name="theme">Theme</string>
    <string name="theme_summary">choose theme</string>
    <string-array name="theme_entries">
        <item>Dark Theme</item>
        <item>Light Theme</item>
    </string-array>
    <string-array name="theme_values">
        <item>dark</item>
        <item>light</item>
    </string-array>

    <string name="menu0">Page One</string>
    <string name="menu1">Page Two</string>
    <string name="menu2">Page Three</string>
    <string name="menu3">Page Four</string>
    <string name="True">True</string>
</resources>
