<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/wireless_network">
        <Preference
            android:title="@string/wifi"
            android:summary="@string/wifi_set"
            android:icon="@drawable/ic_wifi_signal_4_teal"
            android:key="wifi">
            <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.settings"
            android:targetClass="com.android.settings.wifi.WifiSettings"
            />
        </Preference>
        <Preference
            android:title="@string/bluetooth"
            android:summary="@string/bluetooth"
            android:icon="@drawable/ic_settings_bluetooth2"
            android:key="bluetooth">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.settings"
                android:targetClass="com.android.settings.bluetooth.BluetoothSettings"/>
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/about">
    <EditTextPreference android:title="@string/yourname"
        android:key="username"
        android:summary="@string/providerName"/>
    <CheckBoxPreference
        android:title="@string/appupdate"
        android:defaultValue="false"
        android:summary="This option if selected will allow the application to check for latest versions."
        android:key="applicationUpdates" />
        <SwitchPreference
            android:title="@string/True"
            android:key="boolean"
            android:summary="true or false"/>
    <ListPreference
        android:title="@string/downloads"
        android:summary="Select the kind of data that you would like to download"
        android:key="downloadType"
        android:defaultValue="txt"
        android:entries="@array/listArray"
        android:entryValues="@array/listValues" />
        <MultiSelectListPreference
            android:title="@string/multiselect"
            android:key="multiselect"
            android:entries="@array/multis"
            android:entryValues="@array/multivalues"/>
    </PreferenceCategory>
</PreferenceScreen>