<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/preferenceFragment"
        app:showAsAction="always"
        android:icon="@drawable/ic_settings_bluetooth2"
        android:title="PreferenceFragment"
        android:orderInCategory="100"
    />
    <item
        android:id="@+id/one"
        android:title="@string/menu0"
        android:orderInCategory="100"
        />
    <item
        android:id="@+id/two"
        android:title="@string/menu1"
        android:orderInCategory="100"
        />
    <item
        android:id="@+id/three"
        android:title="@string/menu2"
        android:orderInCategory="100"
        />
    <item
        android:id="@+id/four"
        android:title="@string/menu3"
        android:orderInCategory="100"
        />
</menu>