<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<PreferenceCategory
    android:title="@string/wireless_network"
    android:key="@string/wireless_network">

    <Preference
        android:title="Wifi"
        android:key="wifi"
        android:summary="@string/wireless_network"
    />
    <Preference android:title="Google" >
        <intent android:action="android.intent.action.VIEW"
            android:data="https://www.google.com" />
    </Preference>
</PreferenceCategory>
    <PreferenceCategory
        android:title="@string/language"
        android:summary="@string/language_set"
        android:key="@string/language">
        <ListPreference
            android:title="@string/language"
            android:summary="@string/language_set"
            android:key="@string/language"
            android:defaultValue=""
            android:entries="@array/country"
            android:entryValues="@array/countryValues"
            />


    </PreferenceCategory>
</PreferenceScreen>